# timon

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: lib.rs  main.rs  read_parquet_file.rs  write_parquet_file.rs
src/cli/: mod.rs  utils.rs
src/datafusion_query/: cloud_sync.rs  helpers.rs  mod.rs
src/timon_engine/: cloud_sync.rs  db_manager.rs  helpers.rs  mod.rs
