[package]
name = "timon"
version = "0.1.0"
edition = "2021"

[dependencies]
jni = "0.21.1"
arrow = "52.0.0"
parquet =  { version ="52.0.0", features = ["arrow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.0"
libc = "0.2.155"
datafusion = "39.0"
tokio = { version = "1", features = ["full"] }
regex = "1.10.6"
object_store = { version = '0.10.2', features = ["aws"] }
url = "2.5.2"
chrono = "0.4.38"

[lib]
name="timon"
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "native_rust_lib"
path = "src/main.rs"

[profile.release]
debug = 0
lto = true
opt-level = 'z'
split-debuginfo = "off"
codegen-units = 1
strip = true
