[package]
name = "tsdb_timon"
version = "1.0.7"
edition = "2021"
authors = ["Ahmed Boutaraa <ahmed@mongrov.com>"]
description = "Efficient local storage and Amazon S3-compatible data synchronization for time-series data, leveraging Parquet for storage and DataFusion for querying, all wrapped in a simple and intuitive API."
license = "Apache-2.0"
repository = "https://github.com/mongrov/timon"
keywords = ["parquet", "datafusion", "apache-arrow", "tsdb", "S3-storage-sync"]
categories = ["embedded", "database", "filesystem", "os::android-apis"]

[dependencies]
jni = "0.21.1"
arrow = "52.0.0"
parquet =  { version ="52.0.0", features = ["arrow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.0"
libc = "0.2.155"
datafusion = "39.0"
tokio = { version = "1", features = ["full"] }
regex = "1.10.6"
object_store = { version = "0.10.2", features = ["aws"], optional = true }
url = { version = "2.5.2", optional = true }
chrono = "0.4.38"
hex = "0.4.3"

[lib]
name = "tsdb_timon"
crate-type = ["staticlib", "cdylib", "lib"]

[profile.release]
debug = 0
lto = "fat"
opt-level = 'z'
split-debuginfo = "off"
codegen-units = 1
strip = "symbols"
panic = "abort"

[features]
s3_sync = ["object_store", "url"]
